# Octree_Voxel_VTK

./: .gitignore  CMakeLists.txt  README.md  converter.hpp  main.cpp  mi_programa  octree.cpp  octree.hpp  vec3d.hpp
Components/Octree/: octree.cpp  octree.hpp
Components/Reader/: Reader.cpp  Reader.hpp
Components/Tester/: tester.cpp
Components/Vec3D/: vec3d.cpp  vec3d.hpp
Components/Vtk_Builder/: vtk_builder.cpp  vtk_builder.hpp
Resources/: points1.csv  points2.csv  points3.csv  points4.csv
